[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
config = "0.13.4"
deadpool-postgres = {version = "0.11.0", features = ["serde"]}
dotenv = "0.15.0"
serde = {version = "1.0.193", features = ["derive"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
